--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -80,5 +80,7 @@
 		<error-code>500</error-code>
 		<location>/common/error.jsp</location>
 	</error-page>
-
+	<session-config>
+	    <session-timeout>30</session-timeout>
+	</session-config>
 </web-app>
