--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,26 @@
 			<version>${egovframework.rte.version}</version>
 		</dependency>
 
+		<!-- base64(2020.07.31) -->
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.9</version>
+		</dependency>
+
+		<!-- fileupload(2020.07.31) -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-io</artifactId>
+                    <groupId>commons-io</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
 
   		<!-- tiles 시작 -->
 		<dependency>
