--- a/src/main/resources/egovframework/properties/system.properties
+++ b/src/main/resources/egovframework/properties/system.properties
@@ -35,3 +35,10 @@ Globals.kipris.key = QfMK2JVTbLHqejxtjQD2JkVRoYShU=QrAepf8NgOxsU=
 
 # \ud30c\uc77c \uc5c5\ub85c\ub4dc \uacbd\ub85c(\uacbd\ub85c \uc124\uc815\uc740 \ubc18\ub4dc\uc2dc \uc808\ub300\uacbd\ub85c\ub97c \uc0ac\uc6a9\ud574\uc57c\ud568, \uacbd\ub85c \ub4a4\uc5d0 /\ub97c \ubd99\uc5ec \uc8fc\uc5b4\uc57c\ud568.)(2020.07.31)
 Globals.fileStorePath =  C:/egovframework/upload/
+
+# for JFile properties
+system.uploadpath = C:/egovframework/upload/
+no.image.url = /resources/jfile/swfupload/images/no_img.gif
+ftp.server.ip = 127.0.0.1
+ftp.user.id = test
+ftp.user.password = test
