병준 - JFile 직원 등록 커밋

--- a/src/main/resources/egovframework/properties/system.properties
+++ b/src/main/resources/egovframework/properties/system.properties
@@ -38,7 +38,7 @@ Globals.fileStorePath =  C:/egovframework/upload/
 
 # for JFile properties
 system.uploadpath = C:/egovframework/upload/
-no.image.url = /resources/jfile/swfupload/images/no_img.gif
+no.image.url = /images/logo.jpg
 ftp.server.ip = 127.0.0.1
 ftp.user.id = test
 ftp.user.password = test
