--- a/pom.xml
+++ b/pom.xml
@@ -105,11 +105,11 @@
 			</exclusions>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.3.1</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.commons</groupId> -->
+<!-- 			<artifactId>commons-io</artifactId> -->
+<!-- 			<version>1.3.1</version> -->
+<!-- 		</dependency> -->
 
 
 		<!-- tiles 시작 -->
